# FlightsSchedule

./: Cargo.toml  README.md
src/: api_doc.rs  config.rs  main.rs
src/api/: flight.rs  mod.rs
src/handlers/: flight_handler.rs  mod.rs
src/models/: flight.rs
src/services/: flight_service.rs
